# replicator

./: .gitignore  Cargo.toml  arch.puml  opcodes.puml  rustfmt.toml  schema.json
archivelog/2024_09_05/: o1_mf_1_117_mflqx1vl_.arc
docs/opcodes/: opcode0501.puml  opcode0502.puml  opcode0504.puml  opcode0520.puml  pr.hexproj
docs/oracle_settings/: tables.md
scripts/: Replicator.json
src/: constants.rs  ctx.rs  errors.rs  main.rs  metadata.rs  oracle_logical_replicator.rs  replicator.rs  types.rs
src/builder/: formats.rs  mod.rs  queue.rs
src/common/: constants.rs  errors.rs  logmnr_row.rs  mem_manager.rs  memory_pool.rs  mod.rs  thread.rs  types.rs
src/common/types/: fb.rs  mod.rs  rba.rs  record_scn.rs  scn.rs  timestamp.rs  uba.rs  xid.rs
src/locales/: charset.rs  charset_7bit.rs  mod.rs
src/oradefs/: db_object.rs  mod.rs  oracle_schema.rs  oracle_table.rs  sys_obj.rs  sys_tab.rs  sys_user.rs
src/parser/: byte_reader.rs  byte_reader_ws.rs  byte_writer.rs  fs_reader.rs  mod.rs  parser_impl.rs  record_analizer.rs  record_reader.rs  records_manager.rs
src/parser/archive_structs/: mod.rs  (+4 more)
src/replicators/: archive_digger.rs  mod.rs  online_replicator.rs
src/transactions/: mod.rs  transaction.rs  transaction_buffer.rs  transaction_chunk.rs
statistic/: stat0501.txt  stat0502.txt  stat0504.txt  stat0511.txt  stat0519.txt  stat0520.txt  stat1002.txt  stat1008.txt  stat1018.txt  stat1102.txt  stat1103.txt  stat1104.txt  stat1105.txt  stat1106.txt  stat1111.txt  stat1116.txt  stat1901.txt  stat2401.txt  stat2606.txt  stat_opcodes1.txt  stat_opcodes2.txt
(+16 files in other folders)
