[package]
name = "replicator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
crossbeam = "0.8.4"
env_logger = "0.11.5"
log = "0.4.22"
memory-stats = "1.2.0"
oracle = "0.6.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = {version="1.0.132"}

[profile.release]
debug=2
